fixed jump button orange/orange combo

--- a/site/css/edit.css
+++ b/site/css/edit.css
@@ -79,5 +79,4 @@ textarea {
 .jump-button:hover{
    border-style:solid;
    border-color:orange;
-   color:orange;
 }
